objects/partdir_mp__Partner_Details_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>partdir_mp__Community_URL__c</fullName>
        <label>Community URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Field_Set_Name__c</fullName>
        <label>Field Set Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Only_one_review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow only one review per user</description>
        <label>Only one review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Partner_Account_Field__c</fullName>
        <label>Partner Account Field</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Partner Details Setting</label>
</CustomObject>